# BPNN

./: .gitignore  BP Neural Network Formula Derivation.md  BP 神经网络公式推导.md  CMakeLists.txt  Function Comparison and Usage Recommendations.md  LICENSE  README.md  README_EN.md  TODO.md  函数对比与使用推荐.md
docs/: BP Neural Network Formula Derivation.md
example/: CMakeLists.txt  README.md  README_EN.md
example/curve_fitting/: CMakeLists.txt  README.md  README_EN.md
example/digit_recognizer/: CMakeLists.txt  README.md  README_EN.md
example/digit_recognizer/digit_recognizer_gui/: CMakeLists.txt  color_dot_indicator.cpp  color_dot_indicator.h  main.cpp  main_widget.cpp  main_widget.h  pixel_drawing_board.cpp  pixel_drawing_board.h
example/digit_recognizer/digit_recognizer_train/: CMakeLists.txt  main.c
example/digit_recognizer/include/: config.h.in
example/digit_recognizer/models/: 728-128-10-sigmoid-softmax-cce.np
example/digit_recognizer/src/: config.h.in
example/digit_recognizer/train/: CMakeLists.txt  mnist_loader.c  mnist_loader.h
example/digit_recognizer/train/src/: main.c
example/digit_recognizer/use/: CMakeLists.txt  main.cpp  main_widget.cpp  main_widget.h  pixel_drawing_board.cpp  pixel_drawing_board.h
example/digit_recognizer/use/bpnn_net_params/: net_params.np
example/src/: config.h  config.h.in  elapsed_timer.c  elapsed_timer.h  main.c  mnist_loader.c  mnist_loader.h  mnist_parse.h
src/: bpnn.c  bpnn.h
