option(BUILD_DIGIT_RECOGNIZER_EXAMPLE "Build the digit recognizer example" ON)
option(BUILD_CURVE_FITTING_EXAMPLE    "Build the curve fitting example"    OFF)
if(BUILD_DIGIT_RECOGNIZER_EXAMPLE)
    add_subdirectory(digit_recognizer)
endif()
if(BUILD_CURVE_FITTING_EXAMPLE)
    add_subdirectory(curve_fitting)
endif()
